OpenZXRom 2007-12-31
- Routine to allocate arbitrary space in memory ('alloc_space')
- LOAD command implemented ('cmd_load') (except DATA)
- 'cmd_border' moved to 0x2298 to provide 'set_border' entry point at 0x229b
  (used by various Jonathan Cauldwell games)
- Character printing supports comma control (CHR$ 6)
- Character printing supports flash / bright controls (CHR$ 18 and 19)
- Character printing supports user-defined graphics
- Implemented 'border_colour' system variable to preserve border colour after
  tape loading
- Fatal errors now output diagnostic messages
- Bugfix: parameter to CLEAR is not lost during call to clear_screen
- Bugfix: 'consume' (RST 0x0020) no longer wraps interp_ptr at 256b boundaries
- Bugfix: 'skip_whitespace' now gets parameterless and one-parameter control
  codes the right way round
- Bugfix: IM1 interrupt service routine doesn't screw with flags
- Bugfix: 'get_string_expr' logic reversed to not reject string expressions
- Bugfix: 'skip_whitespace' does not skip over byte 0x0e (allowing a
  parameterless BIN to be consumed)

OpenZXRom 2007-10-15
- calc_pop_bc and calc_pop_a now handle floating point values
- RPN calculator mode put in place ('calc' @ 0x0028), although only a limited
  number of commands are supported at present
- Expression parser (was 'get_num_expr', now 'get_expr') extended to work with
  both string and numeric expressions
- PEEK and IN functions implemented ('func_peek' / 'func_in')
- POKE and OUT commands implemented ('cmd_poke' / 'cmd_out')
- USR (numeric) function implemeted ('func_usr')
- PLOT command implemented ('cmd_plot', plus entry points 'pixel_addr'
  and 'plot_bc')
- Changed system font to Clairsys by Paul van der Laan
  <http://www.type-invaders.com/>
- Source now split into multiple files for easier maintenance

OpenZXRom 2006-06-18
- Basic interpreter core ('interp')
- Numeric expression parsing ('get_num_expr'); can process nearly all syntax